12-Jun-2012 Updated Direct3D9 module in the DirectX package to the new ThirdParty module scheme.

11-Jun-2013 QtCommon and Qt-4.7.1 updated to follow the new ThirdParty module scheme, demonstrating the ease of copying files in Test13.

11-Jun-2013 C.ThirdPartyModule now has a special tool type (C.IThirdPartyTool) with a minimal option collection. Overriding the C.ThirdPartyModule.RegisterOutputFiles virtual function in your derived classes then allows registering prebuilt files against Opus' usual output file enums. C.ThirdPartyModule.Libraries abstract function has been removed as it is now obsolete. This new system allows copying of files from ThirdParty prebuilds far easier.

04-Jun-2013 Gcc-4.0 Objective C and C++ option sets also use the Gcc-4.0 C visibility interface.

30-May-2013 VSSolutionBuilder now ignores the .dll extension on any reference assembly.

30-May-2013 C# .csprojs generated from the VSSolutionBuilder now includes the TargetFrameworkVersion element.

29-May-2013 Adding workaround in VSSolutionBuilder for C# solutions, referencing Any CPU. See http://connect.microsoft.com/VisualStudio/feedback/details/503935/msbuild-inconsistent-platform-for-any-cpu-between-solution-and-project.

15-May-2013 Opus.Core.IToolset now has a HasTool method to query if a tool has been registered, since calling Tool will throw an exception if not.

15-May-2013 Corrected the logic in NativeBuilder.DirectoryUpToDate

13-May-2013 OpusOptionCodeGenerator no longer throws an exception when an interface with no properties is used.

07-May-2013 Each package included into a build now adds a preprocessor definition of OPUSPACKAGE_<name>_<version>. Name and version are converted to upper case. Periods and dashes are replaced with underscores.

24-Apr-2013 Opus.Core.File.GetFiles() can now search through directories (last path segment is a directory) and also returns the common directory for all files found.

20-Apr-2013 Adding support for VisualStudio 2012, package VisualC-11.0
